Prevent nav-bar from collapsing.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,8 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+
+/* Override bootstrap breakpoint to prevent nav-bar from collapsing on small widths. */
+$grid-float-breakpoint: 1px;
+
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
@@ -23,15 +27,13 @@ nav {
   }
 }
 /* Centered links */
-@media (min-width: 768px) {
-  .navbar .navbar-nav {
-    display: inline-block;
-    float: none;
-    vertical-align: top;
-  }
-  .navbar .navbar-collapse {
-    text-align: center;
-  }
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+.navbar .navbar-container {
+  text-align: center;
 }
 header {
   display: table;
@@ -50,7 +52,7 @@ header {
   background-size: auto 100%;
   -o-background-size: auto 100%;
   h1 {
-    font-size: 70px;
+    font-size: 65px;
     text-align: center;
     text-shadow: 0 1px 3px rgba(0, 0, 0, .8);
   }
